log
Thu May  5 11:13:12 HSP 2022: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
9c36184
Thu May  5 11:15:51 HSP 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
011ff7e
Thu May  5 11:19:01 HSP 2022: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
5ff3c1f
Thu May  5 11:20:01 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3e9b821
Thu May  5 11:24:11 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:25: error: incompatible types when returning type 'heapElem {aka struct nodo}' but 'void *' was expected
     return pq->heapArray[0];
            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
fdaba1d
Thu May  5 11:24:38 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f85a5d3
Thu May  5 11:25:14 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
840df2d
Thu May  5 11:26:58 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
800d2e6
Thu May  5 11:27:48 HSP 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
0d54b9e
Thu May  5 12:08:53 HSP 2022: 
 heap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
4f61298
Thu May  5 18:52:40 HSP 2022: 
 heap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  7|1
total_score: 45/70
82d127e
Thu May  5 18:53:52 HSP 2022: 
 heap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  7|1
total_score: 50/70
a2ace9e
Fri May  6 11:10:37 HSP 2022: 
 heap.c | 23 ++++++++++++++++-------
 1 file changed, 16 insertions(+), 7 deletions(-)
 tests:  7|1
total_score: 45/70
349fdfa
